--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,13 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "7.4",
+        "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "knplabs/knp-markdown-bundle": "^1.9",
+        "nyholm/psr7": "^1.4",
         "sensio/framework-extra-bundle": "^5.5",
+        "sentry/sentry-symfony": "^4.1",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/debug-bundle": "5.0.*",
